# tool-output-mimicry

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  target_adapter_proposal.yml
.github/workflows/: ci.yml
docs/: discovery_log.md
evidence/: README.md
src/tom_repro/: __init__.py  primitive.py  stego.py
src/tom_repro/targets/: __init__.py  finbot.py
tests/: test_primitive.py
